--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "history": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
@@ -41,19 +42,23 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.2",
-    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.4.0"
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.22.5",
     "@babel/preset-env": "^7.22.20",
-    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-react": "^7.23.3",
+    "axios-mock-adapter": "^1.22.0",
     "babel-jest": "^29.7.0",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.31.11",
+    "jest": "^26.6.0",
     "jest-html-reporters": "^3.1.4",
-    "jest-junit-reporter": "^1.1.0"
+    "jest-junit-reporter": "^1.1.0",
+    "msw": "^2.0.8",
+    "puppeteer": "^21.5.2",
+    "redux-mock-store": "^1.5.4"
   }
 }
